guestbook-set/overlays/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: set-guestbook-ui
  annotations:
    alb.ingress.kubernetes.io/group.name: 'dev2-app-set'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/load-balancer-attributes: 'deletion_protection.enabled=false'
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":80}]'
    service.beta.kubernetes.io/aws-load-balancer-internal: 'true'
spec:
  rules:
    - host: eks.cyrustc.people.aws.dev
      http:
        paths:
          - path: "/standalone-guestbook"
            pathType: Prefix
            backend:
              service:
                name: set-guestbook-ui
                port:
                  number: 80
